crates/ty_python_semantic/resources/mdtest/snapshots/1._unpacking.md_-_2._Unpacking_-_3._Right_hand_side_not_….snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: 1. unpacking.md - 2. Unpacking - 3. Right hand side not …
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unpacking.md
---

# Python source files

## mdtest_snippet.py

```
1 | a, b = 1  # error: [not-iterable]
```

# Diagnostics

```
error[not-iterable]: Object of type `Literal[1]` is not iterable
 --> src/mdtest_snippet.py:1:8
  |
1 | a, b = 1  # error: [not-iterable]
  |        ^
  |
info: It doesn't have an `__iter__` method or a `__getitem__` method
info: rule `not-iterable` is enabled by default

```
