crates/ty_python_semantic/resources/mdtest/snapshots/1._unpacking.md_-_2._Unpacking_-_6._Too_few_values_to_un….snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: 1. unpacking.md - 2. Unpacking - 6. Too few values to un…
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unpacking.md
---

# Python source files

## mdtest_snippet.py

```
1 | [a, *b, c, d] = (1, 2)  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Not enough values to unpack
 --> src/mdtest_snippet.py:1:1
  |
1 | [a, *b, c, d] = (1, 2)  # error: [invalid-assignment]
  | ^^^^^^^^^^^^^   ------ Got 2
  | |
  | Expected 3 or more
  |
info: rule `invalid-assignment` is enabled by default

```
