crates/ty_python_semantic/resources/mdtest/snapshots/1._unresolved_import.md…_-_2._Unresolved_import_di…_-_4._Using_`from`_with_to….snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: 1. unresolved_import.md… - 2. Unresolved import di… - 4. Using `from` with to…
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unresolved_import.md
---

# Python source files

## package/__init__.py

```
```

## package/foo.py

```
1 | def add(x, y):
2 |     return x + y
```

## package/subpackage/subsubpackage/__init__.py

```
1 | from ....foo import add  # error: [unresolved-import]
2 | 
3 | stat = add(10, 15)
```

# Diagnostics

```
error[unresolved-import]: Cannot resolve imported module `....foo`
 --> src/package/subpackage/subsubpackage/__init__.py:1:10
  |
1 | from ....foo import add  # error: [unresolved-import]
  |          ^^^
2 |
3 | stat = add(10, 15)
  |
info: rule `unresolved-import` is enabled by default

```
