crates/ty_python_semantic/resources/mdtest/snapshots/1._unresolved_import.md…_-_2._Unresolved_import_di…_-_6._Using_`from`_with_an….snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: 1. unresolved_import.md… - 2. Unresolved import di… - 6. Using `from` with an…
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unresolved_import.md
---

# Python source files

## mdtest_snippet.py

```
1 | from .does_not_exist.foo.bar import add  # error: [unresolved-import]
2 | 
3 | stat = add(10, 15)
```

# Diagnostics

```
error[unresolved-import]: Cannot resolve imported module `.does_not_exist.foo.bar`
 --> src/mdtest_snippet.py:1:7
  |
1 | from .does_not_exist.foo.bar import add  # error: [unresolved-import]
  |       ^^^^^^^^^^^^^^^^^^^^^^
2 |
3 | stat = add(10, 15)
  |
info: rule `unresolved-import` is enabled by default

```
