crates/ty_python_semantic/resources/mdtest/snapshots/1._unresolved_import.md…_-_2._Unresolved_import_di…_-_7._Using_`from`_with_a_….snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: 1. unresolved_import.md… - 2. Unresolved import di… - 7. Using `from` with a …
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unresolved_import.md
---

# Python source files

## a.py

```
1 | does_exist1 = 1
2 | does_exist2 = 2
```

## mdtest_snippet.py

```
1 | from a import does_exist1, does_not_exist, does_exist2  # error: [unresolved-import]
```

# Diagnostics

```
error[unresolved-import]: Module `a` has no member `does_not_exist`
 --> src/mdtest_snippet.py:1:28
  |
1 | from a import does_exist1, does_not_exist, does_exist2  # error: [unresolved-import]
  |                            ^^^^^^^^^^^^^^
  |
info: rule `unresolved-import` is enabled by default

```
